# PHYS517-Final

./: .gitignore  CMakeLists.txt  README.md  hfb  hfb1  hfb_hubbard  hfb_hubbard_arma.cpp  hfb_hubbard_eigen.cpp  hfb_numeric_current.cpp
DOCS/: fthfb.md  hfb.md  tdhfb.md
fthfb/: data_output.cpp  data_output.h  fthfb_numeric.cpp
tdhfb/: Makefile  README.md  data_output.cpp  data_output.h  hfb_api.h  hfb_numeric_current.cpp  tdhfb.cpp  tdhfb.h  tdhfb_main.cpp  tdhfb_quench.cpp  tdhfb_quench.h  tdhfb_quench_main.cpp
visualizations/: README.md  plot_coherence.py  plot_density.py  plot_energies.py  plot_kappa.py  plot_momentum.py  plot_ph_mixing.py  plot_phase.py  plot_quasiparticle.py  plot_spins.py  read_h5.py
